<resources>
    <string name="app_name">Check In</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_camera_rationale">Access to the camera is needed for QR code detection</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Code detector dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">Camera required for code detection</string>
    <string name="unwritable_tag">NFC tag has been locked or is otherwise unwritable</string>
    <string name="unlockable_tag">NFC tag was successfully written but does not support locking</string>
    <string name="invalid_nfc_tag">Corrupted or blank tag tapped. Please try again.</string>
    <string name="invalid_tag">Please type a valid tag</string>
    <string name="server_or_network_error">Invalid response from server</string>
    <string name="invalid_badge_id">This badge contains invalid data. Possible causes include outdated data, a connection to the wrong checkin2 server, or a forged NFC badge.</string>
    <string name="nfc_locking_enabled">Enabled permanent NFC badge locking</string>
    <string name="nfc_locking_disabled">Disabled permanent NFC badge locking</string>
    <string name="checkin_flow">Check In Flow</string>
    <string name="search_title">Search users</string>
    <string name="search_hint">Enter hacker name or email</string>
    <string name="search_activity_label">Search for Hacker</string>
    <string name="tag_checkin">Checking Hacker In&#8230;</string>
    <string name="switch_check_in">Check in user</string>
    <string name="switch_check_out">Check out user</string>
    <string name="permanent_badge_locking_option_disabled">Not locking tag because the permanent locking option is disabled</string>
    <string name="permanent_badge_locking_option_disabled_debug_build">Didn\'t permanently lock badge because this is a debug build</string>
    <string name="badge_write_error">An error occurred while writing to the badge - try tapping again</string>
    <string name="badge_data_null">This badge appears to be blank - try tapping again</string>
    <string name="checkin_success">User checked in successfully!</string>
    <string name="uuid_not_found">User not found</string>
    <string name="user_not_accepted_and_confirmed">User is not accepted and confirmed in registration</string>
    <string name="checkin_error">Error checking user in. Please try again.</string>
    <string name="get_tags_failed">Failed to get tags</string>
    <string name="user_already_checked_in">User already checked in for this tag</string>
    <string name="user_already_checked_out">User already checked out for this tag</string>
    <string name="cannot_checkout_not_checked_in">Cannot checkout - user is not checked in</string>
    <string name="uuid_or_tag_not_found">User ID or tag name not found</string>
    <string name="nfc_unsupported_device">Device does not support NFC</string>
    <string name="nfc_disabled">NFC is currently disabled</string>
    <string name="nfc_ready">Waiting for badge…</string>
    <string name="application_branch">Application branch</string>
    <string name="dietary_restrictions">Dietary restrictions</string>
    <string name="shirt_size">Shirt size</string>
    <string name="tap_badge_to_track_event">Tap badge to track event</string>
    <string name="name">Name</string>
    <string name="enable_nfc">Enable NFC</string>
    <string name="previous_time">Previous time</string>
    <string name="previous_user">Previous user</string>
    <string name="badge_successfully_written">Badge successfully written</string>
    <string name="hackgt_logo">HackGT logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="instance_url">Instance URL</string>
    <string name="default_instance_url">https://checkin.hack.gt</string>
    <string name="login">Login</string>
    <string name="login_with_your_account_provided_by_hackgt_staff">Login with your account provided by HackGT Staff</string>
    <string name="confirm_user">Confirm User</string>
    <string name="email">Email</string>
    <string name="confirmation_branch">Confirmation branch</string>
    <string name="school">School</string>
    <string name="nfc_error">NFC error</string>
    <string name="confirm_check_in">Confirm Check In</string>
    <string name="unlocked_badge_warning">Watch out! Unless you know what you\'re doing, do not leave this setting enabled. The contents of this badge will not be locked and may be corrupted or modified by anyone in the future</string>
    <string name="warning_symbol">Warning symbol</string>
    <string name="keep_badge_unlocked">Keep tag unlocked</string>
    <string name="badge_unlocked_dev_build">Badge will not be permanently locked because this is a development build</string>
    <string name="badge_contents_will_be_locked">Badge contents will be locked</string>
</resources>
