<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:paddingBottom="6dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="6dp"
    android:clickable="true"
    android:focusableInTouchMode="true" >

        <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:cardCornerRadius="4dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:padding="8dp"
                android:text="@string/tap_badge_to_track_event"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/HackGT">
                <AutoCompleteTextView
                    android:id="@+id/checkin_tag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Tag"
                    android:theme="@style/HackGT"
                    android:inputType="textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/check_in_out_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_check_in"
                android:checked="true"
                android:textSize="18sp"
                android:theme="@style/HackGT"
                android:paddingTop="20dp"
                android:paddingLeft="6dp"/>

            <TextView
                android:id="@+id/track_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/user"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/track_tshirt_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/size"
                android:drawablePadding="8dp"
                android:hint="@string/shirt_size"
                android:paddingStart="8dp"
                android:paddingTop="10dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/track_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/branch"
                android:drawablePadding="8dp"
                android:hint="@string/application_branch"
                android:paddingStart="8dp"
                android:paddingTop="10dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/track_dietary_restrictions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/food"
                android:drawablePadding="8dp"
                android:hint="@string/dietary_restrictions"
                android:paddingStart="8dp"
                android:paddingTop="10dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/nfc_error"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_horizontal"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:src="@drawable/warning"
                android:visibility="gone"
                />

            <ProgressBar
                android:id="@+id/wait_for_badge_tap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center_horizontal"
                android:layout_marginTop="24dp" />


            <TextView
                android:id="@+id/nfcInstructions"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/nfc_ready"
                android:layout_gravity="center_vertical"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enable_nfc_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/white"
                android:background="@color/primaryColor"
                android:padding="12dp"
                android:visibility="gone"
                android:text="@string/enable_nfc" />

            <ImageView
                android:id="@+id/badge_tapped"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:tint="@color/success"
                android:visibility="gone"
                android:gravity="center_horizontal"
                android:layout_gravity="end"
                android:paddingTop="16dp"
                android:src="@drawable/check" />

            <ImageView
                android:id="@+id/invalid_tap"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:visibility="gone"
                android:gravity="center_horizontal"
                android:layout_gravity="end"
                android:paddingTop="16dp"
                android:src="@drawable/ic_close_black_24dp" />

            <TextView
                android:id="@+id/invalid_tap_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:visibility="gone"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/last_successful_checkin_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/clock"
                android:visibility="gone"
                android:drawablePadding="8dp"
                android:hint="@string/previous_time"
                android:paddingStart="8dp"
                android:paddingTop="10dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/last_successful_checkin_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/user"
                android:drawablePadding="8dp"
                android:visibility="gone"
                android:hint="@string/previous_user"
                android:paddingStart="8dp"
                android:paddingTop="10dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20dp" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>
</LinearLayout>